fix wrap-view

--- a/css/main.css
+++ b/css/main.css
@@ -1495,5 +1495,5 @@ A VERTICAL event
 
 .main-wrap {
     max-width: 1920px;
-    margin: 0 auto;
+    margin: 50px auto;
 }
